# active_learning

./: pyproject.toml
prez/: ds_prez_active_learning.pptx
src/: 2022-2023 Football Player Stats.csv  active_learning_on_PRS_and_MNIST.ipynb  active_learning_on_mnist.ipynb  active_learning_on_random_dataset.ipynb  reviews_since_february_with_features 1.csv  reviews_test_nb_bets 2.csv  test.ipynb  ~$github-recovery-codes.tmp
