[tool.poetry]
name = "active-learning"
version = "0.1.0"
description = ""
authors = ["valentin2 <v.cousin@betclicgroup.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
modal-python = "^0.4.2.1"
jupyter = "^1.0.0"
matplotlib = "^3.9.0"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
